k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      name: lugx-frontend
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: lugx-frontend
          image: 1754iitmbda/lugx-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend-service
spec:
  type: NodePort
  selector:
    app: lugx-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
