k8s/lugx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: lugx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend-service
                port:
                  number: 80

          - path: /api/game
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 8080

          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3003

          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3002
